fixed mobile spacing

--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -43,7 +43,7 @@
 
     @media only screen and (max-width: $medium-screen) {
         width: 80%;
-        margin: 10px 0;
+        margin: 0 0 65px 0;
     }
 
     .img-btn {
