--- a/src/styles/components/_cards.scss
+++ b/src/styles/components/_cards.scss
@@ -19,7 +19,7 @@
 
     @media only screen and (max-width: $medium-screen) {
         flex-direction: column;
-        margin: 0 0 100px 0;
+        margin: 0 0 175px 0;
     }
 
     img {
@@ -49,7 +49,7 @@
         height: 100%;
         @media only screen and (max-width: $medium-screen) {
             width: 80%;
-            padding: 10px 0;
+            padding: 50px 0;
         }
     }
 }
