--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -967,7 +967,7 @@ p {
 @media only screen and (max-width: 1450px) {
   .img-btn-container {
     width: 80%;
-    margin: 10px 0;
+    margin: 0 0 65px 0;
   }
 }
 
@@ -1035,7 +1035,7 @@ p {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    margin: 0 0 100px 0;
+    margin: 0 0 175px 0;
   }
 }
 
@@ -1083,7 +1083,7 @@ p {
 @media only screen and (max-width: 1450px) {
   .project-card-container .project-tech-stack {
     width: 80%;
-    padding: 10px 0;
+    padding: 50px 0;
   }
 }
 
